--- a/delete.html
+++ b/delete.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <center><h2>search for product</h2></center>
+    <center><h2>delete product</h2></center>
 
     <div class="container">
         <div class="row g-3">
-            <div class="col col-12 col-sm-6 col-md-6 col-xl-6 col-xxl-6">
-                <label for="" class="form-control">Product Name</label><br>
-                <input type="text" class="form-control">
-            </div>
             
+            <div class="col col-12 col-sm-6 col-md-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-control">Product code</label><br>
+                <textarea name="" id="" class="form-control"></textarea>
+            </div>
             <div class="col col-12 col-sm-12 col-md-12 col-xl-12 col-xxl-12">
-                <button class="btn btn-success">search</button>
+                <button class="btn btn-success">Delete</button>
             </div>
         </div>
     </div>
