--- a/search.html
+++ b/search.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-    <center><h2>search for product</h2></center>
+    <body style="background-color:lightblue;">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#">Search</a>
+                <a class="nav-link" href="delete.html">delete</a>
+                <a class="nav-link" href="view_all.html">View</a>
+                
+              </div>
+            </div>
+          </div>
+        </nav>
+        <BR>
+    <center><h2>Search For Product</h2></center>
 
     <div class="container">
         <div class="row g-3">
