--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-   
+    <body style="background-color:lightblue;">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="search.html">Search</a>
+                <a class="nav-link" href="delete.html">delete</a>
+                <a class="nav-link" href="view_all.html">View</a>
+                
+              </div>
+            </div>
+          </div>
+        </nav>
+        <BR>
+        <center><h1>Product Details</h1></center>
     <div class="container">
         <div class="row g-3">
             <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
